...
    <string name="edit_profile">Edit profile</string>
    <string name="role_text">Role</string>
    <string name="qrscanner">q</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="start_date">Registration Open Date</string>
    <string name="end_date">Registration Close Date</string>
    <string name="description">Description</string>
    <string name="max_entrants">Waitlist Capacity (optional)</string>
    <string name="geolocation">Geolocation</string>
    <string name="event_poster">Event Poster</string>
    <string name="edit_event_poster">edit event poster</string>
    <string name="waiting_list_button">Join waiting list</string>
...
    <string name="event">%s</string>
    <string name="registration_opens_s">Registration opens: %s</string>
    <string name="registration_closes_s">Registration closes: %s</string>
    <string name="time_s">Time: %s</string>
    <string name="place_s">Place: %s</string>
    <string name="check_in_qr_code">Check In QR Code</string>
    <string name="details_qr_code">Details QR Code</string>
    <string name="qr_code">QR code</string>
    <string name="go_back">go back</string>
    <string name="organizer_options">Organizer Options</string>
    <string name="view_entrants">" View Entrants"</string>
    <string name="view_map">" View Map"</string>
    <string name="send_notifications">" Send Notifications"</string>
    <string name="show_check_in_code">" Show Check-In Code"</string>
    <string name="show_details_code">" Show Details Code"</string>
    <string name="delete_event">" Delete Event"</string>
    <string name="edit_event">" Edit Event"</string>
    <string name="cancel">No</string>
    <string name="send">Send</string>
    <string name="send_to">Send to:</string>
    <string name="notification_message">notification message</string>
    <string name="event_announcement">Event Announcement</string>
    <string name="current_title">%s</string>
    <string name="current_start">%s</string>
    <string name="current_end">%s</string>
    <string name="current_description">%s</string>
    <string name="current_max">%s</string>
    <string name="save_changes">Save Changes</string>
    <string name="event_date">Event Date</string>
    <string name="select_role">Select Role</string>
    <string name="event_date_s">Event Date: %s</string>
    <string name="remove_profile">Event Date: %s</string>
    <string name="add_image">Add Image</string>
    <string name="entrants_list">Entrants list</string>
    <string name="register_opens">Register Opens:</string>
    <string name="register_closes">Register Closes:</string>
    <string name="delete_event_admin">Delete Event</string>
    <string name="organizer_options_events">Organizer Options</string>
    <string name="event_description">%s</string>
    <string name="my_events">My Events</string>
    <string name="add_event">Add Event</string>
    <string name="notifications_title">Notifications</string>
    <string name="event_text">Event Name</string>
    <string name="date">Date</string>
    <string name="capacity_d">Capacity: %d</string>
...
    <string name="entrant_event_date">%s</string>
    <string name="delete_my_event">Delete Event</string>
    <string name="empty_phone">No phone given.</string>
    <string name="name_s">%s</string>
    <string name="announcement">Announcement</string>
    <string name="yes">Yes</string>
    <string name="sample_size">Sample size</string>
    <string name="ok">OK</string>
    <string name="invited_list">Invited List</string>

    <string-array name="roles_array">
        <item>Entrant</item>
        <item>Organizer</item>
        <item>Both</item>
...
