<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/edit_text_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organizer_options"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/edit_event_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/edit_event"
        app:drawableStartCompat="@drawable/event_name" />

    <TextView
        android:id="@+id/view_entrants_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/view_entrants"
        app:drawableStartCompat="@drawable/max_attendees" />

    <TextView
        android:id="@+id/view_map_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/view_map"
        app:drawableStartCompat="@drawable/ic_map" />

    <TextView
        android:id="@+id/send_notifications_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/send_notifications"
        app:drawableStartCompat="@drawable/description" />

    <TextView
        android:id="@+id/show_details_code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:drawablePadding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        android:text="@string/show_details_code"
        app:drawableStartCompat="@drawable/ic_qrcode" />

    <TextView
        android:id="@+id/ok_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/primaryGreyColor"
        android:paddingStart="16dp"
        android:textSize="15sp"
        android:paddingEnd="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>