...
            android:drawablePadding="8dp"
            android:text="@string/current_title"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/event_name" />

        <TextView
            android:id="@+id/event_start_date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:gravity="center_vertical"
            android:background="@drawable/edit_text_border"
...
                android:textSize="12sp"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_event_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/primaryPurpleColor"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />
...
